--- a/introduce/public/index.html
+++ b/introduce/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/ha-02.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- GA -->
@@ -17,7 +17,7 @@
     
     <link rel="stylesheet" href="./css/font.css">
 
-    <title>React App</title>
+    <title>자기소개하기</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
